--- a/nasa-project/server/package.json
+++ b/nasa-project/server/package.json
@@ -4,20 +4,26 @@
   "description": "NASA Mission Control API",
   "main": "src/server.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "test-watch": "jest --watchAll",
     "watch": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "express": "^4.17.3",
+    "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
-    "nasa-project": "file:.."
+    "nasa-project": "file:..",
+    "pm2": "^5.2.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
